2005-11-29  Julio Sanchez  <jsanchez@users.sourceforge.net>
	* NEWS: Better support for media objects in GEDCOM output

2005-11-28  Alex Roitman  <shura@gramps-project.org>
	* src/GenericFilter.py (MatchesFilter.apply): Typo.

2005-11-28  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* NEWS: Better support for unicode filenames
	* src/FamilyView.py (change_families): Avoid exception if family
	 does not contain parents

2005-11-28  Julio Sanchez  <jsanchez@users.sourceforge.net>
	* src/DateParser.py: match modifiers in reverse length order so that
	multiword modifiers work even if other modifier matches the first
	words of the longer modifier
	* src/ReadGedcom.py: be more tolerant w.r.t. whitespace in input,
	to parse the output from tools that try (incorrectly) to make
	the GEDCOM easier to read.  Gedcom.pm is one example.
	* src/WriteGedcom.py: make sure referenced family sources are output

2005-11-27  Don Allingham  <don@gramps-project.org>
	* src/MergeData.py: fix dangling family after a merge.

2005-11-27  Alex Roitman  <shura@gramps-project.org>
	* src/po/template.po: Update.

2005-11-26  Don Allingham  <don@gramps-project.org>
	* src/EditPerson.py: properly handled added name types for the
	preferred name

2005-11-25  Wayne Bergeron  <wb@vallnet.com>
	* src/GenericFilter.py
	(IsLessThanNthGenerationAncestorOfDefaultPerson): Add new filter rule.

2005-11-25  Don Allingham  <don@gramps-project.org>
	* src/gramps.glade: enable word wrap on publication information
	on the source display

2005-11-25  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/GenericFilter.py (HasCommonAncestorWith): Catch no longer
	existing person; (IsSpouseOfFilterMatch) Call prepare for recursive
	filter

2005-11-24  Don Allingham  <don@gramps-project.org>
	* src/po/template.po: updated translation file

2005-11-24  Alex Roitman  <shura@gramps-project.org>
	* NEWS: Update.
	* src/docgen/HtmlDoc.py (build_style_declaration): Use top- and
	bottom- margins for paragraph styles.
