@@ -1,3 +1,7 @@
+2005-11-29  Don Allingham  <don@gramps-project.org>
+	* src/GrampsBSDDB.py: change rebuilding of secondary indices
+	to use keys instead of cursors.
+
 2005-11-29  Julio Sanchez  <jsanchez@users.sourceforge.net>
 	* NEWS: Better support for media objects in GEDCOM output
 
